# unitcell

./: .gitignore  Makefile  ice3unit.pl  iceIcunit.pl  iceIhunit.pl  ortho.py  pyproject.toml  unitcell.c  unitcell.py  unitrepeat.c  xx
