[tool.poetry]
name = "unitcell"
version = "0.1.0"
description = ""
authors = ["vitroid <vitroid@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.2"
genice2 = {path = "../GenIce2"}


[tool.poetry.group.dev.dependencies]
genice2 = {path = "../GenIce2"}
sympy = "^1.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
